Fixed error message on zip format error, caused wrapping of edit and other ugly stuff. Removed some padding on quote images for logo's as the new size is large enough to cause a push on the column size.

--- a/css/main.css
+++ b/css/main.css
@@ -471,7 +471,7 @@ Quote form
 .quote_column img {
     display: block;
     margin: 0 auto 20px;
-    padding: 20px;
+    padding: 15px;
 }
 
 .quote_column #mmt_img_1 {
